Commit for Large calculation

--- a/PrintTests.ipynb
+++ b/PrintTests.ipynb
@@ -303,6 +303,41 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Outputing Dataset names\n",
+    "This creates a text file containing the names of the datasets in the UCR archive."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Datasets names are the folders names in the data/UCRArchive_2018 folder\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "# Path to the UCR Archive\n",
+    "path = \"data/UCRArchive_2018\"\n",
+    "\n",
+    "# List of the datasets\n",
+    "datasets = os.listdir(path)\n",
+    "\n",
+    "# Output the list of datasets\n",
+    "with open(\"data/datasets_names.txt\", \"w\") as f:\n",
+    "    for dataset in datasets:\n",
+    "        f.write(dataset + \"\\n\")"
+   ]
   }
  ],
  "metadata": {
@@ -321,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
